<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">Kite Player</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="queue_title">Playing: %1$s</string>
    <string name="browse_folders">Folders</string>
    <string name="browse_folder_subtitle">Songs by folder</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to Cast</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">BAEE7450</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>

    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>

    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="drawer_signout">Sign Out</string>

    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>

    <string name="progress_queueing">Queueing songs...</string>
    <string name="unlinked_session_title">Dropbox Authentication</string>
    <string name="unlinked_session_message">Your Dropbox authentication is no longer valid. \nPlease sign in again.</string>
    <string name="unlinked_session_positive">Sign in with Dropbox</string>
    <string name="unlinked_session_negative">Cancel</string>
    <string name="welcome_message">To get started, sign in using \nyour Dropbox account.</string>
    <string name="welcom_title">Welcome</string>
    <string name="welcome_button">Sign in with Dropbox</string>

    <!-- Preferences -->
    <string name="settings">Settings</string>
    <string name="preference_group_network_data"><![CDATA[Network & Data]]></string>
    <string name="preference_group_storage"><![CDATA[Disk & Storage]]></string>
    <string name="pref_cellular_sync">Sync Over Cellular</string>
    <string name="pref_cellular_sync_summary">When enabled, this will allow the app to download supplementary data over the cellular network (e.g. whole songs) in order to ensure that song information is completely in sync when not connected to a wifi network. \nRecommended setting: OFF</string>
    <string name="pref_cellular_sync_key">pref_cellular_sync</string>
    <string name="pref_cache_size_title">Cache Size Limit</string>
    <string name="pref_cache_size_summary">Maximum amount of device storage (in megabytes) used to keep most listened to songs for faster playback and offline access\nRecommended setting: 500Mb</string>
    <string name="pref_cache_size_key">pref_cache_size</string>
    <string name="pref_cache_size_default">200</string>
    <string name="pref_cellular_stream_key">pref_cellular_stream</string>
    <string name="pref_cellular_stream">Stream Over Cellular</string>
    <string name="pref_cellular_stream_summary">When enabled, this will allow the app to download songs over the cellular network for playing when not connected to a wifi network. \nRecommended setting: OFF</string>
    <string name="error_no_streaming">Streaming over cellular is OFF</string>
    <string name="nosongs_title">No songs found</string>
    <string name="nosong_instructions">Upload your music to Dropbox \nthen refresh to access them here.</string>
    <string name="nosong_refresh">Refresh</string>
</resources>
