<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_group_network_data">

        <SwitchPreference
            android:key="@string/pref_cellular_sync_key"
            android:title="@string/pref_cellular_sync"
            android:summary="@string/pref_cellular_sync_summary"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="@string/pref_cellular_stream_key"
            android:title="@string/pref_cellular_stream"
            android:summary="@string/pref_cellular_stream_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_group_storage">

        <EditTextPreference
            android:key="@string/pref_cache_size_key"
            android:title="@string/pref_cache_size_title"
            android:summary="@string/pref_cache_size_summary"
            android:dialogTitle="@string/pref_cache_size_title"
            android:dialogMessage="@string/pref_cache_size_summary"
            android:defaultValue="@string/pref_cache_size_default"
            android:inputType="number" />

    </PreferenceCategory>

</PreferenceScreen>